fix: adicionando as rotas permitidas no CorsConfig.